--- a/meow/Cargo.toml
+++ b/meow/Cargo.toml
@@ -1,7 +1,13 @@
+cargo-features = ["strip"]
+
 [package]
 name = "meow"
 version = "0.1.0"
 edition = "2018"
+
+[profile.release]
+lto = true
+strip = true
 
 [dependencies]
 rand = "0.8.3"
