--- a/meow/Cargo.toml
+++ b/meow/Cargo.toml
@@ -13,8 +13,8 @@ strip = true
 rand = "0.8.3"
 lazy_static = "1"
 actix-web = "4.0.0-beta.5"
-rusoto_core = { version = "0.46.0", default_features = false, features = [ "rustls" ] }
-rusoto_s3 =  { version = "0.46.0", default_features = false, features = [ "rustls" ] }
+rusoto_core = "0.46.0"
+rusoto_s3 = "0.46.0"
 futures = "0.3.14"
 tokio = "1"
 tokio-stream = "0.1.5"
