--- a/meow/Cargo.toml
+++ b/meow/Cargo.toml
@@ -8,12 +8,10 @@ lto = true
 
 [dependencies]
 rand = "0.8.3"
-lazy_static = "1"
-actix-web = "4.0.0-beta.5"
-rusoto_core = "0.46.0"
-rusoto_s3 = "0.46.0"
-futures = "0.3.14"
-tokio = "1"
-tokio-stream = "0.1.5"
+actix-web = "4.0.1"
+actix-files = "0.6.0"
+tokio = { version = "1", features = [ "fs" ] }
 anyhow = "1"
 url = "2"
+argh = "0.1.7"
+lazy_static = "1.4.0"
