--- a/meow/Cargo.toml
+++ b/meow/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2018"
 lto = true
 
 [dependencies]
+axum = "0.6.0-rc.2"
+tower-http = { version = "0.3.4", features = [ "fs", "limit" ] }
 rand = "0.8"
-actix-web = "4.1"
-actix-files = "0.6"
-tokio = { version = "1", features = [ "fs" ] }
-anyhow = "1"
+futures = "*"
+tokio = { version = "1", features = [ "full" ] }
+tokio-util = { version = "0.7.4", features = [ "compat" ] }
 url = "2"
 argh = "0.1"
 lazy_static = "1.4"
